Adding NL translations for newsletterbundle and added extra parameters to parameters.yml

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -13,3 +13,7 @@ parameters:
 
     locale:            en
     secret:            ThisTokenIsNotSoSecretChangeIt
+
+    piwicms.base_url: ~
+    piwicms.email.from: ~
+    piwicms.email.from.emailaddress: ~
