--- a/web/.htaccess
+++ b/web/.htaccess
@@ -5,6 +5,12 @@
 # to each configured DirectoryIndex file (e.g. index.php, index.html, index.pl).
 DirectoryIndex app.php
 
+php_flag magic_quotes_gpc Off
+php_flag short_open_tag Off
+php_flag register_globals Off
+php_flag session.auto_start Off
+
+
 <IfModule mod_rewrite.c>
     RewriteEngine On
 
