--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
         "jms/serializer-bundle": "dev-master",
         "helios-ag/fm-elfinder-bundle": "1.x",
         "stof/doctrine-extensions-bundle": "~1.1@dev",
-        "beberlei/DoctrineExtensions": "*"
+        "beberlei/DoctrineExtensions": "*",
+        "doctrine/doctrine-fixtures-bundle": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
